--- a/index.html
+++ b/index.html
@@ -6,49 +6,19 @@
 	<meta name="viewport" content="width=792, user-scalable=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<link rel="stylesheet" href="shower/themes/ribbon/styles/screen.css">
-	<!--
-		To apply styles to the certain slides
-		set slide ID to get needed elements
-		-->
-	<style>
-		#Cover h2 {
-			margin:30px 0 0;
-			color:#FFF;
-			text-align:center;
-			font-size:70px;
-			}
-		#Cover p {
-			margin:10px 0 0;
-			text-align:center;
-			color:#FFF;
-			font-style:italic;
-			font-size:20px;
-			}
-			#Cover p a {
-				color:#FFF;
-				}
-		#Picture h2 {
-			color:#FFF;
-			}
-		#SeeMore h2 {
-			font-size:100px
-			}
-		#SeeMore img {
-			width:0.72em;
-			height:0.72em;
-			}
-	</style>
 </head>
 <body class="list">
 	<header class="caption">
-		<h1>Shower Presentation Engine</h1>
-		<p>Yours Truly, Famous Inc.</p>
+		<h1>Condução</h1>
+		<p>Princípios ergonômicos para Interfaces Humano-Computador</p>
 	</header>
 	<section class="slide cover" id="Cover"><div>
-		<h2>Shower Presentation Engine</h2>
-		<p>Brought you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-		<img src="pictures/cover.jpg" alt="">
-		<!-- photo by John Carey, fiftyfootshadows.net -->
+		<h2>Condução</h2>
+		<ul>
+			<li>Fabricio</li>
+			<li>Lucas</li>
+			<li>Rubens</li>
+		</ul>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Shower Key Features</h2>
@@ -122,7 +92,6 @@
 	<section class="slide shout" id="SeeMore"><div>
 		<h2><img src="pictures/logo.svg" alt=""> <a href="https://github.com/shower/shower/">See more on GitHub</a></h2>
 	</div></section>
-	<p class="badge"><a href="https://github.com/shower/shower">Fork me on Github</a></p>
 	<!--
 		To hide progress bar from entire presentation
 		just remove “progress” element.
