--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Shower Presentation Engine</title>
+	<title>Condução</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=792, user-scalable=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -14,11 +14,7 @@
 	</header>
 	<section class="slide cover" id="Cover"><div>
 		<h2>Condução</h2>
-		<ul>
-			<li>Fabricio</li>
-			<li>Lucas</li>
-			<li>Rubens</li>
-		</ul>
+		<p>Equipe: Fabricio, Lucas, Rubens</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Shower Key Features</h2>
