--- a/index.html
+++ b/index.html
@@ -17,43 +17,32 @@
 		<p>Equipe: Fabricio, Lucas, Rubens</p>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Shower Key Features</h2>
-		<ol>
-			<li>Built on HTML, CSS and vanilla JavaScript</li>
-			<li>All modern browsers are supported</li>
-			<li>Slide themes are separated from engine</li>
-			<li>Fully keyboard accessible</li>
-			<li>Printable to PDF</li>
-		</ol>
-		<p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
+		<h2>O que é Condução?</h2>
+		<p>A condução refere-se aos meios disponíveis para aconselhar, orientar, informar, e conduzir o usuário na 
+interação com o computador (mensagens, alarmes, rótulos, etc.).</p>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Plain Text on Your Slides</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
+		<h2>O que é Condução?</h2>
+		<p>Uma boa condução facilita o aprendizado e a utilização do sistema permitindo que o usuário:</p>
+		<ul>
+			<li class="next">saiba a qualquer tempo onde ele se encontra numa seqüência de interações ou na execução de uma 
+tarefa;</li>
+			<li class="next">conheça as ações permitidas bem como suas conseqüências;</li>
+			<li class="next">obtenha informações suplementares (eventualmente por demanda).</li>
+		</ul>
 	</div></section>
 	<section class="slide"><div>
-		<h2>All Kind of Lists</h2>
-		<ol>
-			<li>Simple lists are marked with bullets</li>
-			<li>Ordered lists begin with a number</li>
-			<li>You can even nest lists one inside another
-				<ul>
-					<li>Or mix their types</li>
-					<li>But do not go too far</li>
-					<li>Otherwise audience will be bored</li>
-				</ul>
-			</li>
-			<li>Look, seven rows exactly!</li>
-		</ol>
+		<h2>Convite</h2>
+		<p>Esta qualidade engloba os meios utilizados para levar o usuário a realizar determinadas ações.</p>
+		<p>Também trata das informações que permitem o usuário identificar o estado ou o contexto no qual ele se encontra na interação, além das ações alternativas, ferramentas de ajuda e o modo de acesso.</p>
 	</div></section>
 	<section class="slide"><div>
-		<h2>Serious Citations</h2>
-		<figure>
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-			</blockquote>
-			<figcaption>Marcus Tullius Cicero</figcaption>
-		</figure>
+		<h2>Características de uma interface convidativa</h2>
+		<ul>
+			<li class="next">Títulos claros para as telas, janelas e caixas de diálogos;</li>
+			<li class="next">Informações sobre o preenchimento de um formulário, sobre as entradas esperadas, etc.;</li>
+			<li class="next">Opções de ajuda claramente indicadas;</li>
+		</ul>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Code Samples</h2>
