--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1>Condução</h1>
 		<p>Princípios ergonômicos para Interfaces Humano-Computador</p>
 	</header>
-	<section class="slide cover" id="Cover"><div>
+	<section class="slide cover cover-text"><div>
 		<h2>Condução</h2>
 		<p>Equipe: Fabricio, Lucas, Rubens</p>
 	</div></section>
@@ -44,17 +44,21 @@ tarefa;</li>
 			<li class="next">Opções de ajuda claramente indicadas;</li>
 		</ul>
 	</div></section>
+	<section class="slide cover cover-text"><div>
+		<h2>Agrupamento e distinção entre itens</h2>
+	</div></section>
 	<section class="slide"><div>
-		<h2>Code Samples</h2>
-		<pre>
-			<code>&lt;!DOCTYPE html&gt;</code>
-			<code>&lt;html lang="en"&gt;</code>
-			<code><mark>&lt;head&gt;</mark> <mark class="comment">&lt;!--Comment--&gt;</mark></code>
-			<code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-			<code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-			<code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-			<code><mark>&lt;/head&gt;</mark></code>
-		</pre>
+		<h2>Agrupamento e distinção entre itens</h2>
+		<p>Diz respeito à organização visual dos itens de informação 
+relacionados uns com os outros de alguma maneira. Este critério leva em conta a topologia (localização) e 
+algumas características gráficas (formato) para indicar as relações entre os vários itens mostrados, para indicar 
+se eles pertencem ou não a uma dada classe, ou ainda para indicar diferenças entre classes. Este critério 
+também diz respeito à organização dos itens de uma classes.</p>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Agrupamento e distinção por localização</h2>
+		<p>Diz respeito ao posicionamento relativo dos itens, estabelecido para indicar se eles pertencem ou não a uma dada classe, ou, ainda, para indicar diferençãso entre classes.</p>
+		<p>Este critério também diz respeito ao posicionamento relativo dos itens dentro de uma classe.</p>
 	</div></section>
 	<section class="slide cover" id="Picture"><div>
 		<h2>Pictures</h2>
