--- a/index.html
+++ b/index.html
@@ -60,31 +60,17 @@ também diz respeito à organização dos itens de uma classes.</p>
 		<p>Diz respeito ao posicionamento relativo dos itens, estabelecido para indicar se eles pertencem ou não a uma dada classe, ou, ainda, para indicar diferençãso entre classes.</p>
 		<p>Este critério também diz respeito ao posicionamento relativo dos itens dentro de uma classe.</p>
 	</div></section>
-	<section class="slide cover" id="Picture"><div>
-		<h2>Pictures</h2>
-		<img src="pictures/picture.jpg" alt="">
-		<!-- photo by John Carey, fiftyfootshadows.net -->
-	</div></section>
-	<section class="slide shout"><div>
-		<h2>You can even shout this way</h2>
-	</div></section>
 	<section class="slide"><div>
-		<h2>Inner Navigation</h2>
-		<ol>
-			<li>Lets you reveal list items one by one</li>
-			<li class="next">To keep some key points</li>
-			<li class="next">In secret from audience</li>
-			<li class="next">But it will work only once</li>
-			<li class="next">Nobody wants to see the same joke twice</li>
-		</ol>
+		<h2>Agrupamento e distinção por localização</h2>
+		<p>Recomendações</p>
+		<ul>
+			<li class="next">Organizar os itens em listas hierárquicas;</li>
+			<li class="next">Organizar as opções de um diálogo por menus, em função dos objetos aos quais elas se aplicam;</li>
+			<li class="next">Quando várias opções são apresentadas, sua organização deve ser lógica, i.e., a organização deve 
+representar uma organização funcional relevante ou significativa (ordem alfabética, freqüência de 
+uso, etc.);</li>
+		</ul>
 	</div></section>
-	<section class="slide shout" id="SeeMore"><div>
-		<h2><img src="pictures/logo.svg" alt=""> <a href="https://github.com/shower/shower/">See more on GitHub</a></h2>
-	</div></section>
-	<!--
-		To hide progress bar from entire presentation
-		just remove “progress” element.
-		-->
 	<div class="progress"><div></div></div>
 	<script src="shower/shower.min.js"></script>
 	<!-- Copyright © 2013 Yours Truly, Famous Inc. -->
