--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@ garantindo ao usuário que o sistema voltou ao seu estado prévio;</li>
 fornecidas;</li>
 		</ul>
 	</div></section>
+	<section class="slide cover cover-text"><div>
+		<h2>Dúvidas?</h2>
+		<p class="next">That's all folks!</p>
+	</div></section>
 
 	<div class="progress"><div></div></div>
 	<script src="shower/shower.min.js"></script>
