--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ interação com o computador (mensagens, alarmes, rótulos, etc.).</p>
 		<h2>O que é Condução?</h2>
 		<p>Uma boa condução facilita o aprendizado e a utilização do sistema permitindo que o usuário:</p>
 		<ul>
-			<li class="next">saiba a qualquer tempo onde ele se encontra numa seqüência de interações ou na execução de uma 
+			<li class="next">saiba a qualquer tempo onde ele se encontra numa sequência de interações ou na execução de uma 
 tarefa;</li>
 			<li class="next">conheça as ações permitidas bem como suas conseqüências;</li>
 			<li class="next">obtenha informações suplementares (eventualmente por demanda).</li>
