--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ solicitada e seu resultado.</p>
 		<p>Recomendações</p>
 		<ul>
 			<li class="next">Todas as entradas dos usuários devem ser mostradas, com exceção de dados sigilosos (usar * neste caso);</li>
-			<li class="next">Seguindo a interrupção pelo usuário de um processamento de dados, mostrar um mensagem 
+			<li class="next">Seguindo a interrupção pelo usuário de um processamento de dados, mostrar uma mensagem 
 garantindo ao usuário que o sistema voltou ao seu estado prévio;</li>
 			<li class="next">Quando o processamento é longo, informações sobre o estado do processamento devem ser 
 fornecidas;</li>
