--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ tarefa;</li>
 relacionados uns com os outros de alguma maneira. Este critério leva em conta a topologia (localização) e 
 algumas características gráficas (formato) para indicar as relações entre os vários itens mostrados, para indicar 
 se eles pertencem ou não a uma dada classe, ou ainda para indicar diferenças entre classes. Este critério 
-também diz respeito à organização dos itens de uma classes.</p>
+também diz respeito à organização dos itens de uma classe.</p>
 	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Agrupamento e distinção por localização</h2>
