--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ também diz respeito à organização dos itens de uma classe.</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Agrupamento e distinção por localização</h2>
-		<p>Diz respeito ao posicionamento relativo dos itens, estabelecido para indicar se eles pertencem ou não a uma dada classe, ou, ainda, para indicar diferençãso entre classes.</p>
+		<p>Diz respeito ao posicionamento relativo dos itens, estabelecido para indicar se eles pertencem ou não a uma dada classe, ou, ainda, para indicar diferenças entre classes.</p>
 		<p>Este critério também diz respeito ao posicionamento relativo dos itens dentro de uma classe.</p>
 	</div></section>
 	<section class="slide"><div>
