--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ também diz respeito à organização dos itens de uma classe.</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Agrupamento e distinção por localização</h2>
-		<p>Recomendações</p>
+		<p>Recomendações:</p>
 		<ul>
 			<li class="next">Organizar os itens em listas hierárquicas;</li>
 			<li class="next">Organizar as opções de um diálogo por menus, em função dos objetos aos quais elas se aplicam;</li>
@@ -87,7 +87,7 @@ uso, etc.);</li>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Agrupamento e distinção por formato</h2>
-		<p>Recomendações</p>
+		<p>Recomendações:</p>
 		<ul>
 			<li class="next">Fazer uma distinção visual clara de áreas que têm diferentes funções (área de comandos, área de mensagens, etc.).</li>
 			<li class="next">Fazer uma distinção visual clara dos campos de dados e seus rótulos.</li>
@@ -105,7 +105,7 @@ etc.).</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Legibilidade</h2>
-		<p>Recomendações</p>
+		<p>Recomendações:</p>
 		<ul>
 			<li class="next">Títulos devem ser centralizados;</li>
 			<li class="next">Rótulos devem estar em letras maiúsculas;</li>
@@ -115,7 +115,7 @@ etc.).</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Legibilidade</h2>
-		<p>Recomendações</p>
+		<p>Recomendações:</p>
 		<ul>
 			<li class="next">Exibir texto contínuo em colunas largas;</li>
 			<li class="next">A justificação a direita deve ser empregada se puder ser obtida por espaçamento;</li>
