--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ também diz respeito à organização dos itens de uma classe.</p>
 		<ul>
 			<li class="next">Organizar os itens em listas hierárquicas;</li>
 			<li class="next">Organizar as opções de um diálogo por menus, em função dos objetos aos quais elas se aplicam;</li>
-			<li class="next">Quando várias opções são apresentadas, sua organização deve ser lógica, i.e., a organização deve 
+			<li class="next">Quando várias opções são apresentadas, sua organização deve ser lógica, ou seja, a organização deve 
 representar uma organização funcional relevante ou significativa (ordem alfabética, freqüência de 
 uso, etc.);</li>
 		</ul>
