--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ etc.).</p>
 		<p>Recomendações:</p>
 		<ul>
 			<li class="next">Exibir texto contínuo em colunas largas;</li>
-			<li class="next">Ao exibir um material textual, mantenha as palavras intactas, com o mínimo de hífens;</li>
+			<li class="next">Ao exibir um material textual, manter as palavras intactas, com o mínimo de hífens;</li>
 		</ul>
 	</div></section>
 	<section class="slide cover cover-text"><div>
