--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@ etc.).</p>
 	<section class="slide"><div>
 		<h2>Feedback imediato</h2>
 		<p>Feedback Imediato diz respeito às respostas do sistema às ações do usuário. Estas entradas podem ir do 
-simples pressionar de uma tecla até uma lista de comandos. Em todos os casos, respostas do computador 
-devem ser fornecidas, de forma rápida, com passo (timing) apropriado e consistente para cada tipo de 
-transação. Em todos os casos, uma resposta rápida deve ser fornecida com informação sobre a transação 
+simples pressionar de uma tecla até uma lista de comandos. Em todos os casos, uma resposta rápida deve ser fornecida com informação sobre a transação 
 solicitada e seu resultado.</p>
 	</div></section>
 	<section class="slide"><div>
