--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ solicitada e seu resultado.</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Feedback imediato</h2>
-		<p>Recomendações</p>
+		<p>Recomendações:</p>
 		<ul>
 			<li class="next">Todas as entradas dos usuários devem ser mostradas, com exceção de dados sigilosos (usar * neste caso);</li>
 			<li class="next">Seguindo a interrupção pelo usuário de um processamento de dados, mostrar uma mensagem 
