--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ tarefa;</li>
 			<li class="next">obtenha informações suplementares (eventualmente por demanda).</li>
 		</ul>
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/dropbox.png" alt="Dropbox" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Convite</h2>
 	</div></section>
