--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ tarefa;</li>
 	<section class="slide"><div>
 		<img src="pictures/dropbox.png" alt="Dropbox" width="800" height="500">
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/login-catolica.png" alt="Dropbox" width="800" height="600">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Convite</h2>
 	</div></section>
