--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ tarefa;</li>
 		<img src="pictures/dropbox.png" alt="Dropbox" width="800" height="500">
 	</div></section>
 	<section class="slide"><div>
-		<img src="pictures/login-catolica.png" alt="Dropbox" width="800" height="600">
+		<img src="pictures/ava.png" alt="AVA" width="800" height="600">
 	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Convite</h2>
