--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ tarefa;</li>
 		</ul>
 	</div></section>
 	<section class="slide"><div>
-		<img src="pictures/dropbox.png" alt="Dropbox" width="800" height="500">
+		<img src="pictures/dropbox.png" alt="Dropbox" width="900" height="500">
 	</div></section>
 	<section class="slide"><div>
 		<img src="pictures/ava.png" alt="AVA" width="800" height="600">
@@ -52,6 +52,9 @@ tarefa;</li>
 			<li class="next">Informações sobre o preenchimento de um formulário, sobre as entradas esperadas, etc.;</li>
 			<li class="next">Opções de ajuda claramente indicadas;</li>
 		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/rdio.png" alt="Rdio" width="800" height="500">
 	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Agrupamento e distinção entre itens</h2>
