--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 	</div></section>
 	<section class="slide"><div>
 		<h2>O que é Condução?</h2>
-		<p>A condução refere-se aos meios disponíveis para aconselhar, orientar, informar, e conduzir o usuário na 
+		<p>A condução refere-se aos meios disponíveis para aconselhar, orientar, informar, e conduzir o usuário na
 interação com o computador (mensagens, alarmes, rótulos, etc.).</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>O que é Condução?</h2>
 		<p>Uma boa condução facilita o aprendizado e a utilização do sistema permitindo que o usuário:</p>
 		<ul>
-			<li class="next">saiba a qualquer tempo onde ele se encontra numa sequência de interações ou na execução de uma 
+			<li class="next">saiba a qualquer tempo onde ele se encontra numa sequência de interações ou na execução de uma
 tarefa;</li>
 			<li class="next">conheça as ações permitidas bem como suas conseqüências;</li>
 			<li class="next">obtenha informações suplementares (eventualmente por demanda).</li>
@@ -54,17 +54,17 @@ tarefa;</li>
 		</ul>
 	</div></section>
 	<section class="slide"><div>
-		<img src="pictures/rdio.png" alt="Rdio" width="800" height="500">
+		<img src="pictures/maps.png" alt="Rdio" width="800" height="500">
 	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Agrupamento e distinção entre itens</h2>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Agrupamento e distinção entre itens</h2>
-		<p>Diz respeito à organização visual dos itens de informação 
-relacionados uns com os outros de alguma maneira. Este critério leva em conta a topologia (localização) e 
-algumas características gráficas (formato) para indicar as relações entre os vários itens mostrados, para indicar 
-se eles pertencem ou não a uma dada classe, ou ainda para indicar diferenças entre classes. Este critério 
+		<p>Diz respeito à organização visual dos itens de informação
+relacionados uns com os outros de alguma maneira. Este critério leva em conta a topologia (localização) e
+algumas características gráficas (formato) para indicar as relações entre os vários itens mostrados, para indicar
+se eles pertencem ou não a uma dada classe, ou ainda para indicar diferenças entre classes. Este critério
 também diz respeito à organização dos itens de uma classe.</p>
 	</div></section>
 	<section class="slide cover cover-text"><div>
@@ -81,8 +81,8 @@ também diz respeito à organização dos itens de uma classe.</p>
 		<ul>
 			<li class="next">Organizar os itens em listas hierárquicas;</li>
 			<li class="next">Organizar as opções de um diálogo por menus, em função dos objetos aos quais elas se aplicam;</li>
-			<li class="next">Quando várias opções são apresentadas, sua organização deve ser lógica, ou seja, a organização deve 
-representar uma organização funcional relevante ou significativa (ordem alfabética, freqüência de 
+			<li class="next">Quando várias opções são apresentadas, sua organização deve ser lógica, ou seja, a organização deve
+representar uma organização funcional relevante ou significativa (ordem alfabética, freqüência de
 uso, etc.);</li>
 		</ul>
 	</div></section>
@@ -107,8 +107,8 @@ uso, etc.);</li>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Legibilidade</h2>
-		<p>Características lexicais das informações apresentadas na tela que possam dificultar 
-ou facilitar a leitura desta informação (brilho do caracter, contraste letra/fundo, tamanho da fonte, 
+		<p>Características lexicais das informações apresentadas na tela que possam dificultar
+ou facilitar a leitura desta informação (brilho do caracter, contraste letra/fundo, tamanho da fonte,
 espaçamento entre palavras, espaçamento entre linhas, espaçamento de parágrafos, comprimento da linha,
 etc.).</p>
 	</div></section>
@@ -135,8 +135,8 @@ etc.).</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Feedback imediato</h2>
-		<p>Feedback Imediato diz respeito às respostas do sistema às ações do usuário. Estas entradas podem ir do 
-simples pressionar de uma tecla até uma lista de comandos. Em todos os casos, uma resposta rápida deve ser fornecida com informação sobre a transação 
+		<p>Feedback Imediato diz respeito às respostas do sistema às ações do usuário. Estas entradas podem ir do
+simples pressionar de uma tecla até uma lista de comandos. Em todos os casos, uma resposta rápida deve ser fornecida com informação sobre a transação
 solicitada e seu resultado.</p>
 	</div></section>
 	<section class="slide"><div>
@@ -144,9 +144,9 @@ solicitada e seu resultado.</p>
 		<p>Recomendações:</p>
 		<ul>
 			<li class="next">Todas as entradas dos usuários devem ser mostradas, com exceção de dados sigilosos (usar * neste caso);</li>
-			<li class="next">Seguindo a interrupção pelo usuário de um processamento de dados, mostrar uma mensagem 
+			<li class="next">Seguindo a interrupção pelo usuário de um processamento de dados, mostrar uma mensagem
 garantindo ao usuário que o sistema voltou ao seu estado prévio;</li>
-			<li class="next">Quando o processamento é longo, informações sobre o estado do processamento devem ser 
+			<li class="next">Quando o processamento é longo, informações sobre o estado do processamento devem ser
 fornecidas;</li>
 		</ul>
 	</div></section>
@@ -157,6 +157,6 @@ fornecidas;</li>
 
 	<div class="progress"><div></div></div>
 	<script src="shower/shower.min.js"></script>
-	
+
 </body>
 </html>
