--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ tarefa;</li>
 	<section class="slide"><div>
 		<img src="pictures/maps.png" alt="Rdio" width="800" height="500">
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/yandex.png" alt="Rdio" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Agrupamento e distinção entre itens</h2>
 	</div></section>
