--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ tarefa;</li>
 		</ul>
 	</div></section>
 	<section class="slide"><div>
-		<img src="pictures/maps.png" alt="Rdio" width="800" height="500">
+		<img src="pictures/maps.png" alt="Google Maps" width="800" height="500">
 	</div></section>
 	<section class="slide"><div>
-		<img src="pictures/yandex.png" alt="Rdio" width="800" height="500">
+		<img src="pictures/yandex.png" alt="Yandex" width="800" height="500">
 	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Agrupamento e distinção entre itens</h2>
@@ -82,6 +82,9 @@ também diz respeito à organização dos itens de uma classe.</p>
 representar uma organização funcional relevante ou significativa (ordem alfabética, freqüência de
 uso, etc.);</li>
 		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/dropbox.png" alt="Dropbox" width="800" height="500">
 	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Agrupamento e distinção por formato</h2>
