--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ uso, etc.);</li>
 	<section class="slide"><div>
 		<img src="pictures/dropbox.png" alt="Dropbox" width="800" height="500">
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/ouvidoria.png" alt="Ouvidoria" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Agrupamento e distinção por formato</h2>
 	</div></section>
