--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ uso, etc.);</li>
 			<li class="next">Fazer uma distinção visual clara dos campos de dados e seus rótulos.</li>
 		</ul>
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/rdio.png" alt="Rdio - Iron Maiden" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Legibilidade</h2>
 	</div></section>
