--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@ etc.).</p>
 			<li class="next">Ao exibir um material textual, manter as palavras intactas, com o mínimo de hífens;</li>
 		</ul>
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/wp.png" alt="WordPress" width="800" height="500">
+	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/lab.png" alt="Lab" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Feedback imediato</h2>
 	</div></section>
