--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@ garantindo ao usuário que o sistema voltou ao seu estado prévio;</li>
 fornecidas;</li>
 		</ul>
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/milagro.png" alt="Milagro" width="800" height="500">
+	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/bb.png" alt="BB" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Dúvidas?</h2>
 		<p class="next">That's all folks!</p>
