--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ etc.).</p>
 	<section class="slide"><div>
 		<img src="pictures/wp.png" alt="WordPress" width="800" height="500">
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/caixa.png" alt="Caixa" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Feedback imediato</h2>
 	</div></section>
