--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@ uso, etc.);</li>
 	<section class="slide"><div>
 		<img src="pictures/rdio.png" alt="Rdio - Iron Maiden" width="800" height="500">
 	</div></section>
+	<section class="slide"><div>
+		<img src="pictures/biblioteca.png" alt="Biblioteca" width="800" height="500">
+	</div></section>
 	<section class="slide cover cover-text"><div>
 		<h2>Legibilidade</h2>
 	</div></section>
